--- a/css/fontsCss/style.css
+++ b/css/fontsCss/style.css
@@ -10,7 +10,7 @@
  @import url('https://fonts.googleapis.com/css2?family=Koulen&family=Oswald:wght@300&family=Roboto+Condensed:wght@300&display=swap');
 
  ::selection {
-    background: #000;
+    background: rgb(70, 70, 70);
     color: #fff;
  }
 
